
2013-01-22  Daniel Juyung Seo (SeoZ)

        * Enhanced diskselector add and item_append time.

2013-01-23  WooHyun Jung

        * In _timer_cb of elm_notify, access to sd should be forbidden after smart_callback_call is called.

2013-01-26  ChanWook Jung (jchanwook@gmail.com)

        * Expand elm_transit tween_mode and add twee_mode_factor_set(),get() APIs

2013-01-26  WooHyun Jung

        * A widget which doesn't have focus_region_get should give its width and height for correct focus_region_show.

2013-01-26  Daniel Juyung Seo (SeoZ)

        * Add elm_index_delay_change_time_set/get for changing delay change time in index.

2013-01-28  Shinwoo Kim

        * [access] The read next/prev message does not move focus but move highlight only. the focus moves when the activate message is detected.

2013-01-29  Jaehwan Kim

        * Fix the scroll position is calculated by the size of pan object, not the size of scroller.

2013-01-29  ChunEon Park (Hermet)

        * Fix a elm_transit crash issue when user delete all target objects in the effect end callback.

2013-02-05  ChunEon Park (Hermet)

        * Index supports "language,changed" smart callback.

2013-02-07  WooHyun Jung

        * elm_entry_single_line_set should not change cnp_mode when PLAINTEXT mode.

2013-02-07  Jaehwan Kim

        * Add smart callback signals of a scroller. "vbar,drag", "vbar,press", "vbar,unpress", "hbar,drag", "hbar,press", "hbar,unpress".

2013-02-12  ChunEon Park (Hermet)

        * GLview, Gengrid support "language,changed" smart callback.

2013-02-12  ChunEon Park (Hermet)

        * Ctxpopup will be dismissed when elm language is changed.

2013-02-12  ChunEon Park (Hermet)

        * added APIs - elm_object_item_translatable_part_text_set(), elm_object_item_translatable_part_text_get().

2013-02-12  Arvind R

        * Fix elc_player pause state to be in sync.
        * Fix time string display to handle hours right.